Creo mi funcion init y str

--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -5,16 +5,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mi perceptron"
+    "Mi perceptron multi capa para clasificar datos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Perceptron:\n",
+    "    def __init__(self, capas = None):\n",
+    "        if capas is None:   self.capas = [np.matrix([[0],[0]])]  \n",
+    "        else:               self.capas = capas                  #* Paso mi lista de matrices que son los pesos de las capas del Perceptron\n",
+    "            \n",
+    "        self.dim_input  = self.capas[0].shape[0]\n",
+    "        self.dim_output = self.capas[-1].shape[1]\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        print(\"dim_input  = \", self.dim_input)\n",
+    "        print(\"dim_output = \", self.dim_output)\n",
+    "        return f\"{self.capas}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dim_input  =  2\n",
+      "dim_output =  1\n",
+      "[matrix([[1],\n",
+      "        [1]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_0 = [np.matrix([[1], [1]])]\n",
+    "perceptron = Perceptron(x_0)\n",
+    "print(perceptron)"
    ]
   }
  ],
